fixed member viewing on mobile; made not fixed and added close button

--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -4,10 +4,6 @@
 @import "variables";
 @import "mixins";
 
-.reveal-modal{
-    position : fixed;
-}
-
 .current-members {
     .member {
         background-color: $dark-bg;
